--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,21 @@ section > div {
     margin-top: 0;
 }
 
+.grid-container {
+    display: grid; 
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 5px;
+    background-color: palevioletred;
+    padding: 5px;
+}
+
+.grid-container > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid black;
+    text-align: center;
+    font-size: 30px;
+  }
+
 .example {
     display: grid;
     grid-gap: 0.5rem;
